Misc tidying + shorthand for MapRelationUtils using slot0 as key